end of day push

--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -2,9 +2,36 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Sign Up</title>
   </head>
-  <body>
-
-  </body>
+  <body >
+  <h1 style="text-align:center;"> Sign Up</h1>
+  <div class="container" style="align-items: center; margin-top: 10em;">
+    <form class="col s12" style="text-align:center;" action="/user-sign-up" method="post">
+    <div class="input-field col s12">
+          <i class="material-icons prefix">fingerprint</i>
+          <input id="username" type="text" required class="validate" name="username">
+          <label class ="active" for="username">Username</label>
+        </div>
+        <div class="input-field col s6">
+          <i class="material-icons prefix">account_circle</i>
+          <input id="first_name" type="text" required class="validate" name="name">
+          <label class="active" for="first_name">Name</label>
+        </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">email</i>
+          <input id="email" type="email" required class="validate" name="email">
+          <label class="active" for="email">Email</label>
+        </div>
+        <div class="input-field col s12">
+          <i class="material-icons prefix">vpn_key</i>
+          <input id="password" type="password" required class="validate" name="password">
+          <label class="active" for="password">Password</label>
+        </div>
+        <input type="submit" value="Sign Up" class="waves-effect waves-light btn">
+        </form>
+  </div>
+</body>
 </html>
