--- a/views/landing.erb
+++ b/views/landing.erb
@@ -5,14 +5,16 @@
     <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
     <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
 
-
     <title>Orion BNB</title>
   </head>
+  <nav>
+    <div class="nav-wrapper navigation">
+      <a href="/" class="brand-logo">OrionBNB</a>
+      
+    </div>
+  </nav>
   <body>
- <div class="container" style="justify-content: center;
-    display: flex;
-    align-items: center;
-    margin-top: 10em;">
+ <div class="container">
 <div class="col s8" style="text-align:center;">
 
   <h1>OrionBNB</h1>
