--- a/views/log_in.erb
+++ b/views/log_in.erb
@@ -2,8 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Log in page</title>
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
+    <title>Log In</title>
   </head>
+  <nav>
+  <div class="nav-wrapper navigation">
+    <a href="/" class="brand-logo">OrionBNB</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+    </ul>
+  </div>
+</nav>
   <body>
 
   </body>
