--- a/views/sign_up.erb
+++ b/views/sign_up.erb
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
     <title>Sign Up</title>
   </head>
+  <nav>
+  <div class="nav-wrapper navigation">
+    <a href="/" class="brand-logo">OrionBNB</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="/log-in">Log In</a></li>
+    </ul>
+  </div>
+</nav>
   <body >
   <h1 style="text-align:center;"> Sign Up</h1>
   <div class="container" style="align-items: center; margin-top: 10em;">
@@ -33,5 +42,7 @@
         <input type="submit" value="Sign Up" class="waves-effect waves-light btn">
         </form>
   </div>
+
+
 </body>
 </html>
