--- a/public/css/materialize.css
+++ b/public/css/materialize.css
@@ -4272,7 +4272,7 @@ table span.badge {
 nav {
   padding-left: 48px;
   color: #fff;
-  background-color: #00e5ff;
+  background-color: #0d47a1;
   width: 100%;
   height: 56px;
   line-height: 56px;
