--- a/views/listings.erb
+++ b/views/listings.erb
@@ -2,8 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link type="text/css" rel="stylesheet" href="/css/materialize.css"  media="screen,projection"/>
+    <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
     <title>Listings</title>
   </head>
+  <nav>
+  <div class="nav-wrapper navigation">
+    <a href="/" class="brand-logo">OrionBNB</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="/user-log-out">Log Out</a></li>
+    </ul>
+  </div>
+</nav>
   <body>
 
   </body>
