--- a/views/log_in.erb
+++ b/views/log_in.erb
@@ -5,6 +5,14 @@
     <title>Log in page</title>
   </head>
   <body>
-
+<form action="/user-log-in" method="post">
+  <label for="username">Username:
+    <input type="text" name="username"
+    <label/>
+  <label for="password">Password:
+    <input type="password" name="password"
+    <label/>
+    <input type="submit"  value="Login">
+    <form/>
   </body>
 </html>
