--- a/views/listings.erb
+++ b/views/listings.erb
@@ -10,6 +10,7 @@
   <div class="nav-wrapper navigation">
     <a href="/" class="brand-logo">OrionBNB</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
+    <li><a href="/profile">Profile</a></li>
       <li><a href="/user-log-out">Log Out</a></li>
     </ul>
   </div>
