--- a/views/profile.erb
+++ b/views/profile.erb
@@ -16,6 +16,18 @@
   </div>
 </nav>
   <body>
-
+  <div class="row">
+<div class="col s7 push-s5"> <h1 style="text-align:right;"> Welcome <%= @user%> </h1> </div>
+    <div class="col s3 pull-s7">
+      <div class="card">
+        <div class="card-image">
+          <img src="images/makerslogo.png">
+        </div>
+        <div class="card-content">
+          <p> <%= @user %>.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
