--- a/views/profile.erb
+++ b/views/profile.erb
@@ -29,5 +29,15 @@
       </div>
     </div>
   </div>
+
+  <div class="container">
+    <form action="/add-listing" method="post">
+      <input type="text" name="space_name">
+      <input type="number" name="price_per_night" step="0.01" min="0">
+      <input type="text" name="description">
+      <input type="submit" value="Submit">
+    </form>
+  </div>
+
   </body>
 </html>
