--- a/views/log_in.erb
+++ b/views/log_in.erb
@@ -7,6 +7,8 @@
    <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
     <title>Log In</title>
   </head>
+  
+  <body>
   <nav>
   <div class="nav-wrapper navigation">
     <a href="/" class="brand-logo">OrionBNB</a>
@@ -14,9 +16,8 @@
     </ul>
   </div>
 </nav>
-  <body>
 <h1 style="text-align:center;"> Log In</h1>
-<div class="container" style="align-items: center; margin-top: 8em;">
+<div class="container" style="align-items: center;">
     <form class="col s12" style="text-align:center;" action="/user-log-in" method="post">
     <div class="input-field col s12">
           <i class="material-icons prefix">fingerprint</i>
