--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,5 +16,19 @@
 
 h1 {
   color: #0d47a1;
-  margin-top: 50px;
+  margin-top: 20px;
+}
+h2 {
+  color: #0d47a1;
+  margin-top: 20px;
+}
+h6 {
+  color: #0d47a1;
+  margin-top: 20px;
+}
+
+blockquote {
+  margin: 20px 0;
+  padding-left: 1.5rem;
+  border-left: 5px solid #0d47a1;
 }
