--- a/views/profile.erb
+++ b/views/profile.erb
@@ -6,6 +6,8 @@
     <link type="text/css" rel="stylesheet" href="/css/styles.css"  media="screen,projection"/>
     <title>User Profile</title>
   </head>
+  
+  <body>
   <nav>
   <div class="nav-wrapper navigation">
     <a href="/" class="brand-logo">OrionBNB</a>
@@ -15,29 +17,51 @@
     </ul>
   </div>
 </nav>
-  <body>
   <div class="row">
-<div class="col s7 push-s5"> <h1 style="text-align:right;"> Welcome <%= @user%> </h1> </div>
-    <div class="col s3 pull-s7">
+<div class="col s7 push-s4"> <h1 style="text-align:right;"> Welcome <%= @user%> </h1> </div>
+    <div class="col s2 pull-s7">
       <div class="card">
         <div class="card-image">
           <img src="images/makerslogo.png">
         </div>
         <div class="card-content">
-          <p> <%= @user %>.</p>
+          <p> <%= @user %></p>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="container">
-    <form action="/add-listing" method="post">
-      <input type="text" name="space_name">
-      <input type="number" name="price_per_night" step="0.01" min="0">
-      <input type="text" name="description">
-      <input type="submit" value="Submit">
-    </form>
-  </div>
+
+
+  <div class="row" style="text-align:centre;">
+      <form action="/add-listing" method="post" class="col s4 offset-s3" >
+        <h2 style="text-align:center;"> Add Listing</h2>
+
+        <div class="row">
+          <div>
+            <input name="space_name" type="text" data-length="10">
+            <label for="space_name">Space Name</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div>
+            <input name="price_per_night" type="number" step="0.01" min="0">
+            <label for="price_per_night">Price Per Night</label>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="input-field col s12">
+            <textarea name="description" class="materialize-textarea" data-length="120"></textarea>
+            <label for="description" class="active">Description</label>
+          </div>
+        </div>
+<input type="submit" value="Add Listing" class="waves-effect waves-light btn">
+      </form>
+    </div>
 
   </body>
 </html>
+
+
